# bayes-classifier

./: README.md  bayes_classifier.py  pyproject.toml
