[tool.poetry]
name = "bayes-classifier"
version = "0.1.0"
description = ""
authors = ["batbat99 <hbatayneh@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
sklearn = "^0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
